--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,37 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "run-dev": "scripts/run-dev.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Irineu Antunes",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "async": "^2.4.0",
+    "body-parser": "^1.17.1",
+    "compression": "^1.6.2",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "express-session": "^1.15.2",
+    "morgan": "^1.8.1",
+    "nconf": "^0.8.4",
+    "node-uuid": "^1.4.8",
+    "socket.io": "^2.0.1",
+    "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint-plugin-jasmine": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-eslint": "^3.0.1",
+    "gulp-jasmine": "^2.4.2",
+    "jasmine": "^2.6.0",
+    "jasmine-core": "^2.6.1",
+    "jasmine-expect": "^3.7.0",
+    "jasmine-spec-reporter": "^4.1.0",
+    "require-all": "^2.2.0"
+  }
 }
